--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "author": "bzyk83",
     "version": "2025-09-14",
     "description": "Kompletna lista kanałów z satelity Hotbird 13E oraz Astra 19e.",
-    "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/refs/heads/main/archives/bzyk83%20hb_13E%202025-09-14.zip"
+    "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/refs/heads/main/archives/bzyk83%20dual_13e_19e%202025-09-14.zip"
   },
   {
     "id": "jakitaki_polsat_hb_astra",
