--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
-[
+ IPTV[
   {
     "id": "bzyk_hb13e",
     "name": "Bzyk83 Hotbird 13e",
@@ -17,7 +17,7 @@
   },
   {
     "id": "jakitaki_1x1_uhd",
-    "name": "JakiTaki 1x1 uhd",
+    "name": "JakiTaki 13E IPTV",
     "author": "JakiTaki",
     "version": "2025-09-14",
     "description": "Lista Hotbird i Astra.",
