--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
   {
     "id": "jakitaki_1x1_uhd",
-    "name": "JakiTaki 13E IPTV",
+    "name": "Lista JakiTaki 1x1 uhd",
     "author": "JakiTaki",
     "version": "2025-09-14",
     "description": "Lista Hotbird i Astra.",
