--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "bzyk_hb13e",
-    "name": "Bzyk83 Hotbird 13e",
+    "name": "Lista Bzyk83 Hotbird 13e",
     "author": "bzyk83",
     "version": "2025-09-14",
     "description": "Kompletna lista kanałów z satelity Hotbird 13E.",
@@ -9,7 +9,7 @@
   },
   {
     "id": "bzyk_dual",
-    "name": "Bzyk83 Dual 13e 19e",
+    "name": "Lista Bzyk83 Dual 13e 19e",
     "author": "bzyk83",
     "version": "2025-09-14",
     "description": "Kompletna lista kanałów z satelity Hotbird 13E oraz Astra 19e.",
@@ -17,7 +17,7 @@
   },
   {
     "id": "jakitaki_1x1_uhd",
-    "name": "JakiTaki 1x1 uhd",
+    "name": "Lista JakiTaki 1x1 uhd",
     "author": "JakiTaki",
     "version": "2025-09-14",
     "description": "Lista Hotbird i Astra.",
