--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
     "name": "JakiTaki 13E IPTV",
     "author": "JakiTaki",
     "version": "2025-09-14",
-    "description": "Lista Hotbird i Astra.",
+    "description": "Lista Hotbird .",
     "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/jakitaki_1x1uhd_2025-09-14.zip"
   }
 ]
