--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,14 @@
     "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/bzyk83_dual_13e_19e_2025-09-14.zip"
   },
   {
+    "id": "jakitaki_1x1",
+    "name": "JakiTaki 13E",
+    "author": "JakiTaki",
+    "version": "2025-09-14",
+    "description": "Lista Hotbird- .",
+    "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/refs/heads/main/archives/jakitaki_1x1_2025-09-14.zip"
+  },
+  {
     "id": "jakitaki_1x1_uhd",
     "name": "JakiTaki 13E UHD",
     "author": "JakiTaki",
