--- a/manifest.json
+++ b/manifest.json
@@ -62,5 +62,13 @@
   "version": "2025-11-07",
   "description": "Lista kanałów IPTV.",
   "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/zvirek13.2x1.IPTV.07.11.25.zip"
+},
+  {
+  "id": "azman_iptv_settings",
+  "name": "Lista Azman IPTV Settings",
+  "author": "Azman",
+  "version": "2025-11-14",
+  "description": "Azman.",
+  "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/azmanIPTVsettings-main.zip"
 }
 ]
