--- a/manifest.json
+++ b/manifest.json
@@ -64,11 +64,11 @@
   "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/zvirek13.2x1.IPTV.07.11.25.zip"
 },
 {
-  "id": "azman_iptv_settings",
-  "name": "Lista Azman IPTV Settings",
+  "id": "azman_lista_bzyk",
+  "name": "Lista Azman",
   "author": "Azman",
   "version": "2025-11-14",
-  "description": "Azman.",
-  "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/azmanIPTVsettings-main.zip"
+  "description": "Bukiety Azman.",
+  "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/azman_lista_2025-11-14.zip"
 }
 ]
