--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,14 @@
     "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/Pawel_Pawelek_HB_13E_03.01.2026.zip"
   },
   {
+    "id": "pawel_pawelek_dual",
+    "name": "Paweł Pawełek Dual 13E + 19.2E",
+    "author": "Paweł Pawełek",
+    "version": "2026-01-03",
+    "description": "Autorska lista kanałów z satelitów Hotbird 13E oraz Astra 19.2E (Paweł Pawełek).",
+    "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/Pawel_Pawelek_DUAL_13E_19.2E_03.01.2026.zip"
+  },
+  {
     "id": "bzyk_hb13e",
     "name": "Bzyk83 Hotbird 13e",
     "author": "bzyk83",
