--- a/manifest.json
+++ b/manifest.json
@@ -35,32 +35,32 @@
     "id": "jakitaki_1x1",
     "name": "JakiTaki 13E",
     "author": "JakiTaki",
-    "version": "2025-11-30",
-    "description": "Lista Hotbird- .",
+    "version": "2026-01-04",
+    "description": "Lista Hotbird.",
     "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/jakitaki_1x1_2026-01-04.zip"
   },
   {
     "id": "jakitaki_1x1_uhd",
     "name": "JakiTaki 13E UHD",
     "author": "JakiTaki",
-    "version": "2025-11-30",
-    "description": "Lista Hotbird .",
+    "version": "2026-01-04",
+    "description": "Lista Hotbird UHD.",
     "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/jakitaki_1x1uhd_2026-01-04.zip"
   },
   {
     "id": "jakitaki_2x1",
     "name": "JakiTaki 13E-19E",
     "author": "JakiTaki",
-    "version": "2025-11-30",
-    "description": "Lista Hotbird-Astra .",
+    "version": "2026-01-04",
+    "description": "Lista Hotbird-Astra.",
     "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/jakitaki_2x1_2026-01-04.zip"
   },
   {
     "id": "jakitaki_2x1_uhd",
     "name": "JakiTaki 13E-19E UHD",
     "author": "JakiTaki",
-    "version": "2025-11-30",
-    "description": "Lista Hotbird-Astra .",
+    "version": "2026-01-04",
+    "description": "Lista Hotbird-Astra UHD.",
     "url": "https://github.com/OliOli2013/PanelAIO-Lists/raw/main/archives/jakitaki_2x1uhd_2026-01-04.zip"
   },
   {
